Bug 1017595 - Links from external applications sometimes fail to open when Firefox is hidden. r=spohl, a=lmandel